--- a/templates/base.html
+++ b/templates/base.html
@@ -1,15 +1,17 @@
 <!doctype html>
-<html lang="uk">
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{% block title %}Language{% endblock %}</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="{{ url_for('static', path='/styles.css') }}">
   {% block extra_head %}{% endblock %}
 </head>
 <body class="{% block body_class %}{% endblock %}">
   {% block header %}{% endblock %}
   {% block content %}{% endblock %}
+  {% include "partials/profile_drawer.html" %}
   {% block scripts %}{% endblock %}
 </body>
 </html>
