--- a/templates/flashcard.html
+++ b/templates/flashcard.html
@@ -4,7 +4,8 @@
 
 {% block extra_head %}
   {{ super() }}
-  <link rel="stylesheet" href="{{ url_for('static', path='/flashcard.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', path='/flashcard.css') }}" data-theme-sheet="amber">
+  <link rel="stylesheet" href="{{ url_for('static', path='/flashcard.sapphire.css') }}" data-theme-sheet="sapphire" disabled>
 {% endblock %}
 
 {% block body_class %}flashcard{% endblock %}
@@ -126,4 +127,8 @@
     </div>
   </section>
 </main>
+{% endblock %}
+
+{% block scripts %}
+<script type="module" src="{{ url_for('static', path='/main-app.js') }}"></script>
 {% endblock %}
