--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,8 @@
 
 {% block extra_head %}
   {{ super() }}
-  <link rel="stylesheet" href="{{ url_for('static', path='/home.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', path='/home.css') }}" data-theme-sheet="amber">
+  <link rel="stylesheet" href="{{ url_for('static', path='/home.sapphire.css') }}" data-theme-sheet="sapphire" disabled>
 {% endblock %}
 
 {% block body_class %}home{% endblock %}
