--- a/templates/random.html
+++ b/templates/random.html
@@ -4,7 +4,8 @@
 
 {% block extra_head %}
   {{ super() }}
-  <link rel="stylesheet" href="{{ url_for('static', path='/random.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', path='/random.css') }}" data-theme-sheet="amber">
+  <link rel="stylesheet" href="{{ url_for('static', path='/random.sapphire.css') }}" data-theme-sheet="sapphire" disabled>
 {% endblock %}
 
 {% block body_class %}random{% endblock %}
